force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/FSM_SendMeasuringPointReadingEvent__e.object-meta.xml
<CustomObject>
    <description>SFI-26</description>
    <label>Send Measuring Point Reading Event</label>
    <pluralLabel>Send Measuring Point Reading Events</pluralLabel>
</CustomObject>