force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FSM_Comments__c</fullName>
    <description>SFI-691</description>
    <label>Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>