force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateTime__c</fullName>
    <description>SFI-691</description>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>