force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>SFI-26</description>
    <label>WO External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>