force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_MeasuringDocumentId__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringDocumentId__c</fullName>
    <description>SFI-691</description>
    <label>Measuring Document Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>