force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_MeasuringPointReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPointReading__c</fullName>
    <description>SFI_26</description>
    <label>Measuring Point Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>