force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_Mpvalcode__c.field-meta.xml
<CustomField>
    <fullName>FSM_Mpvalcode__c</fullName>
    <description>SFI-1559</description>
    <label>Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>