force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <description>SFI-691</description>
    <label>Order Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>