force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_Reading__c.field-meta.xml
<CustomField>
    <fullName>FSM_Reading__c</fullName>
    <description>SFI-26</description>
    <label>Current Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>