force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_ReadingTakenBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReadingTakenBy__c</fullName>
    <label>Reading taken by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>