force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_ReverseIndicator__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReverseIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-691</description>
    <label>Reverse Indicator</label>
    <type>Checkbox</type>
</CustomField>