force-app/main/default/objects/FSM_SendMeasuringPointReadingEvent__e/fields/FSM_SAPUserID__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAPUserID__c</fullName>
    <description>SFI-1724</description>
    <label>SAP UserID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>